# akerbp

./: .gitignore  2026-06-SentinelAI.md  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
notebooks/: 01_explore_skab.ipynb  02_calibration_policy.ipynb  03_TimesFM.ipynb  04_quantile_heteroscedastic_newsensor.ipynb
src/sentinelai/: __init__.py  config.py
src/sentinelai/audit/: record.py
src/sentinelai/baseline/: weak_controls.py
src/sentinelai/composer_policy/: config.py  cost.py  decision.py
src/sentinelai/models/: cnn_detector.py  heteroscedastic.py  quantile.py  timesfm_backbone.py  timesfm_detector.py
src/sentinelai/policy/: decision.py
src/sentinelai/uncertainty/: calibration.py  conformal.py
tests/: test_policy.py  test_windows.py
