[project]
name = "sentinelai"
version = "0.1.0"
description = "SentinelAI interview solution — SKAB mock with conformal prediction and policy layer"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pytest>=9.1.1",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.1",
    "torch>=2.12.1",
]

[build-system]
requires = ["uv_build>=0.11.25,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
